# fourth_lab

./: CMakeLists.txt  main.cpp
second_lab/src/: ArraySequence.h  DynamicArray.h  ICollection.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Option.h  Sequence.h  SequencePrint.h
second_lab/src/tpps/: ArraySequence.tpp  DynamicArray.tpp  LinkedList.tpp  ListSequence.tpp
second_lab/tests/: test_ArraySequence.cpp  test_DynamicArray.cpp  test_LinkedList.cpp  test_ListSequence.cpp
src/: Functors.h  Generator.h  IComparer.h  LazySequence.h  OnlineStatistics.h  Ordinal.h  PriorityQueue.h  Stream.h
tests/: test_generator.cpp  test_lazy.cpp  test_ordinal.cpp  test_queue.cpp  test_statistics.cpp  test_streams.cpp
